# polynomial_traj

./: CMakeLists.txt  README.md  package.xml
launch/: quick_test.launch
src/: polynomial_traj.cpp  pub_traj.cpp  test_node.cpp
